# simplegit

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: git.c  git.h
src/builtin/: version.c
